infra/development/k8s/web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
#  namespace: sales-system
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: web-default
      port: 80
      targetPort: 3000 # match_me

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: k3d-trip-cluster-registry:5000/web:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000 # match_me
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 10
          failureThreshold: 3
